# trader-ai

./: .coverage  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  AUTO_TRAINING_SETUP.md  BACKFILL_COMPLETE.md  CAPITAL_PROJECTION_30_DAYS.md  CHANGES_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  FEATURES.md  FINAL_SUMMARY.md  LICENSE  Makefile  OPTIMIZATION_CHANGES.md  OPTIMIZATION_GUIDE.md  OPTIMIZATION_NOTES.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_START.md  README.md  SCHEDULE_UPDATE.md  SIGNAL_VS_PREDICTION.md  STATUS_AND_ROADMAP.md  SYSTEM_OVERVIEW.md  TRAINING_IMPROVEMENTS.md  TRAINING_METRICS_ANALYSIS.md  TRAINING_PARAMETERS_15X.md  TRAINING_STATUS_UPDATE.md  TWO_STAGE_TRAINING.md  aggressive_scenarios.py  alembic.ini  analyze_real_performance.py  api.Dockerfile  capital_simulation.py  celerybeat-schedule  docker-compose.yml  monitor_backfill.sh  openapi.yaml  (+7 more)
apps/api/: cache.py  config.py  crud.py  db.py  deps.py  main.py  migrations_env.py  models.py  pyproject.toml  routers.py  routers_webhooks.py  schemas.py  security.py  seed.py  websocket.py  ws.py  ws_manager.py
apps/api/db/: __init__.py  base.py  models.py  session.py
apps/api/integrations/: webhooks.py
apps/api/models/: __init__.py
apps/api/routers/: auth.py  auto_train.py  backfill.py  backtest.py  drift.py  internal.py  settings.py  signals.py  system.py  train.py  users.py
apps/api/security/: __init__.py  auth.py
apps/api/services/: risk.py  signal_accuracy.py  signals_service.py
apps/api/tests/: test_backfill_resume.py  test_filters.py  test_rules.py  test_sizing_liquidation.py  test_validator_liquidity.py
apps/api/tools/: backtester.py  filters.py  run_backtest.py  signals.py  sizing.py
apps/api/trader_api/: config.py  kafka_bus.py  main.py  models.py  redis_cache.py  schemas.py
apps/api/trader_api/routes/: backfill.py  signals.py  train.py
apps/api/trader_api/services/: backtests.py  filters.py  risk.py  sizing.py
apps/api/trader_api/ws/: backtest.py  live.py
apps/ml/: arbitrage.py  auto_trainer.py  backfill.py  backtest.py  ccxt_client.py  celery_signals.py  cleanup.py  config.py  costs.py  drift.py  execution.py  feature_pipeline.py  features.py  labeling.py  market_regime.py  model_registry.py  models.py  performance_tracker.py  pyproject.toml  registry.py  resample.py  risk.py  sample_data.py  sentiment_plugin.py  signal_engine.py  signal_engine.py.backup  summaries.py  ta_utils.py  train.py  training.py  validators.py  walkforward.py  worker.py
apps/ml/backfill/: runner.py
apps/ml/data/: ccxt_client.py  orderbook_ccxt.py
apps/ml/features/: indicators.py
apps/ml/jobs/: backfill.py  backfill_ccxt.py  backtest.py  features.py  ingest_funding_oi.py  ingest_orderbook.py  train.py
apps/ml/labels/: meta.py  triple_barrier.py
apps/ml/models/: booster.py  conformal.py  seq.py  stacking.py
apps/ml/risk/: config.py  engine.py
apps/ml/trader_ml/data/: backfill.py
apps/ml/trading/: rules.py
apps/ml/train/: lightgbm_pipeline.py
apps/ml/utils/: timescale.py
apps/ml/validation/: walkforward.py
(+396 files in other folders)
