
[tool.poetry]
name = "trader-ai"
version = "0.1.0"
description = "Trader AI monorepo"
authors = ["You <you@example.com>"]
readme = "README.md"
packages = [{include = "apps"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version="^0.30.0"}
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
pydantic = "^2.8.2"
pandas = "^2.2.2"
numpy = "^2.0.1"
ccxt = "^4.3.98"
python-dotenv = "^1.0.1"
redis = "^5.0.7"
passlib = "^1.7.4"
bcrypt = "==4.0.1"
pyjwt = "^2.9.0"
celery = "^5.4.0"
numpy = "^2.0.1"
scikit-learn = "^1.5.2"
lightgbm = "^4.5.0"
xgboost = "^2.1.1"
optuna = "^3.6.1"
statsmodels = "^0.14.2"
websockets = "^12.0"
tenacity = "^9.0.0"
orjson = "^3.10.7"
requests = "^2.32.3"
typer = "^0.12.3"
loguru = "^0.7.2"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
ruff = "^0.6.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"

[tool.ruff]
line-length = 100
