[tool.poetry]
name = "traderai"
version = "1.0.0"
description = "AI-powered crypto futures trading signal system"
authors = ["TraderAI Team"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
redis = "^5.0.1"
celery = {extras = ["redis"], version = "^5.3.6"}
ccxt = "^4.2.25"
pandas = "^2.1.4"
ta-lib = "^0.4.28"
numpy = "^1.26.3"
scikit-learn = "^1.4.0"
lightgbm = "^4.3.0"
xgboost = "^2.0.3"
torch = "^2.1.2"
optuna = "^3.5.0"
scipy = "^1.12.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
websockets = "^12.0"
aiohttp = "^3.9.1"
asyncpg = "^0.29.0"
httpx = "^0.26.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^23.12.1"
ruff = "^0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]
