[project]
name = "trader-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.8.2",
  "SQLAlchemy==2.0.34",
  "psycopg[binary]==3.2.1",
  "aiokafka==0.10.0",
  "redis==5.0.8",
  "python-dotenv==1.0.1",
  "orjson==3.10.7",
]

[tool.pytest.ini_options]
pythonpath = ["."]
